tests/testcases/invalid/semantic/51_param_redeclaration_in_function_scope.ciel
// Test that parameter names cannot be redeclared in the same scope (function body)

int test1(int x, int y) {
    int x;  // Error: redeclaration of parameter 'x'
    return x + y;
}

int test2(int a) {
    int b;
    int a;  // Error: redeclaration of parameter 'a'
    return a + b;
}

int test3(float value) {
    float value;  // Error: redeclaration of parameter 'value'
    return value;
}

int test4(int *ptr) {
    int *ptr;  // Error: redeclaration of parameter 'ptr'
    return *ptr;
}

int main() {
    return 0;
}
